--- a/src/main/resources/templates/error/pageNotFound.html
+++ b/src/main/resources/templates/error/pageNotFound.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+<html lang="pt-br">
+<head th:insert="fragments/header">
+    <title>Title</title>
 </head>
-<body>
-$END$
+<body class="bg-branco dark:bg-cinza flex items-center justify-center h-screen">
+<div class="text-center border border-gray-300 dark:border-preto rounded-lg shadow-lg p-8">
+    <h1 class="mb-4 text-6xl font-semibold text-red-500">404</h1>
+    <p class="mb-4 text-lg text-gray-600 dark:text-branco">Oops! Você parece estar perdido.</p>
+    <div class="animate-bounce">
+        <svg class="mx-auto h-16 w-16 text-red-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8"
+            />
+        </svg>
+    </div>
+    <p class="mt-4 text-gray-600 dark:text-branco">Vamos retornar para a <a href="/" class="text-blue-500">home</a>.</p>
+</div>
 </body>
 </html>
