--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" th:href="@{/images/icone.png}" type="image/x-icon">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        'preto': '#222831',
+                        'cinza': '#393E46',
+                        'cinza-claro': '#ADB3C1',
+                        'amarelo': '#FFD369',
+                        'dourado': '#FABD36',
+                        'branco': '#EEEEEE'
+                    }
+                }
+            }
+        }
+    </script>
+    <title>Oficina Mecânica</title>
 </head>
-<body>
-$END$
-</body>
 </html>
