--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,94 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
+<head th:insert="fragments/header">
+    <title>Title</title>
 </head>
-<body>
-$END$
+<body class="bg-branco dark:bg-cinza">
+<header>
+    <header>
+        <nav th:replace="fragments/navbar :: navbar(usuario=${usuario})"></nav>
+    </header>
+    <main class="p-4">
+        <div class="my-16">
+            <h1 class="font-bold text-2xl md:text-3xl lg:text-4xl xl:text-5xl 2xl:text-5xl text-dourado mb-2 mx-auto text-center">
+                A mais famosa oficina mecânica das redes está a um clique de você!
+            </h1>
+            <p class="text-center md:text-lg xl:text-xl text-cinza dark:text-branco">
+                Chegamos até você através dos virais, agora queremos chegar com nosso serviço!.
+            </p>
+            <p class="text-center md:text-lg xl:text-xl text-cinza dark:text-branco">
+                Com nosso agendamento online, você pode reservar um horário sem sair
+                do conforto da sua casa.
+            </p>
+        </div>
+        <h2 class="font-bold text-xl md:text-2xl lg:text-3xl xl:text-4xl 2xl:text-5xl text-dourado mb-10 mx-auto text-center">
+            Por que a Oficina do Seu Gilberto?
+        </h2>
+
+        <div style="background-image: url('/images/oficina.jpg');
+            background-size: cover;
+            background-position: center;
+            border-radius: 40px;"
+             class="grid grid-cols-12 gap-4 p-8 my-auto">
+            <div class="text-gray-500 col-span-12 sm:mx-auto md:col-span-6 lg:col-span-4 my-3 block max-w-sm p-6 border rounded-lg shadow-xl transition duration-500 ease-in-out bg-cinza dark:bg-preto hover:shadow-none hover:text-white">
+                <h3 class="mb-2 text-2xl font-bold tracking-tight text-amarelo">
+                    Custo benefício
+                </h3>
+                <p class="font-normal">
+                    Nossos preços são montados em conjunto com o cliente, analisando mão
+                    de obra e peças selecionadas, nossa oficina oferece o melhor para o
+                    seu bolso!
+                </p>
+            </div>
+            <div class="text-gray-500 col-span-12 sm:mx-auto md:col-span-6 lg:col-span-4 my-3 block max-w-sm p-6 border rounded-lg shadow-xl transition duration-500 ease-in-out bg-cinza dark:bg-preto hover:shadow-none hover:text-white">
+                <h3 class="mb-2 text-2xl font-bold tracking-tight text-amarelo">
+                    Desconto fidelidade
+                </h3>
+                <p class="font-normal">
+                    Ao se cadastrar na nossa oficina você passa a acumular descontos e
+                    promoções para utilizar quando quiser!
+                </p>
+            </div>
+            <div class="text-gray-500 col-span-12 sm:mx-auto md:col-span-6 lg:col-span-4 my-3 block max-w-sm p-6 border rounded-lg shadow-xl transition duration-500 ease-in-out bg-cinza dark:bg-preto hover:shadow-none hover:text-white">
+                <h3 class="mb-2 text-2xl font-bold tracking-tight text-amarelo">
+                    Agendamento
+                </h3>
+                <p class="font-normal">
+                    Nossa oficina oferece agendamento online para revisão, manutenção e
+                    conserto! Basta se cadastrar e agendar o seu horário!
+                </p>
+            </div>
+            <div class="text-gray-500 col-span-12 sm:mx-auto md:col-span-6 lg:col-span-4 my-3 block max-w-sm p-6 border rounded-lg shadow-xl transition duration-500 ease-in-out bg-cinza dark:bg-preto hover:shadow-none hover:text-white">
+                <h3 class="mb-2 text-2xl font-bold tracking-tight text-amarelo">
+                    Mecânicos especializados no serviço
+                </h3>
+                <p class="font-normal">
+                    Nossos mecânicos são preparados e especializados para atacar e
+                    solucionar de forma eficiente o seu problema!
+                </p>
+            </div>
+            <div class="text-gray-500 col-span-12 sm:mx-auto md:col-span-6 lg:col-span-4 my-3 block max-w-sm p-6 border rounded-lg shadow-xl transition duration-500 ease-in-out bg-cinza dark:bg-preto hover:shadow-none hover:text-white">
+                <h3 class="mb-2 text-2xl font-bold tracking-tight text-amarelo">
+                    Cashback
+                </h3>
+                <p class="font-normal">
+                    Ao realizar o pagamento com nossos parceiros, você recebe um
+                    cashback de até 5%!
+                </p>
+            </div>
+            <div class="text-gray-500 col-span-12 sm:mx-auto md:col-span-6 lg:col-span-4 my-3 block max-w-sm p-6 border rounded-lg shadow-xl transition duration-500 ease-in-out bg-cinza dark:bg-preto hover:shadow-none hover:text-white">
+                <h3 class="mb-2 text-2xl font-bold tracking-tight text-amarelo">
+                    Manutenção de carros elétricos
+                </h3>
+                <p class="font-normal">
+                    Oferecemos suporte para carros elétricos, com mão de obra
+                    especializada e capacitada para atender o seu veículo!
+                </p>
+            </div>
+        </div>
+    </main>
+    <footer th:replace="fragments/footer :: footer"></footer>
+</header>
+<script th:src="@{/js/navbar.js}"></script>
 </body>
 </html>
