Commit, iniciando cadastro de usuario

--- a/src/main/resources/templates/error/pageNotFound.html
+++ b/src/main/resources/templates/error/pageNotFound.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head th:insert="fragments/header">
+<head th:insert="~{fragments/header}">
     <title>Title</title>
 </head>
 <body class="bg-branco dark:bg-cinza flex items-center justify-center h-screen">
