--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
-<head th:insert="fragments/header">
+<head th:insert="~{fragments/header}">
     <title>Title</title>
 </head>
 <body class="bg-branco dark:bg-cinza">
