--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 <body class="bg-branco dark:bg-cinza">
 <header>
     <header>
-        <nav th:replace="fragments/navbar :: navbar(usuario=${usuario})"></nav>
+        <nav th:replace="fragments/navbar :: navbar(usuario=${logado})"></nav>
     </header>
     <main class="p-4">
         <div class="my-16">
