--- a/src/main/resources/templates/login/index.html
+++ b/src/main/resources/templates/login/index.html
@@ -6,7 +6,13 @@
 <body class="bg-cinza-claro dark:bg-preto flex items-center justify-center h-screen">
     <section class="my-auto mx-auto w-full max-w-lg">
         <h1 class="text-center text-xl text-cinza dark:text-branco my-4">Insira seu email e senha de acesso para concluir o log in</h1>
-        <form th:action="@{/login}" method="post" class="bg-branco shadow-md rounded px-8 pt-6 pb-8 mb-4 dark:bg-cinza">
+
+        <h2 th:if="${loginError}" th:text="${loginError}" class="text-center text-red-600 text-lg my-4"></h2>
+        <h2 th:if="${loginRequired}" th:text="${loginRequired}" class="text-center text-red-600 text-lg my-4"></h2>
+        <h2 th:if="${logoutSuccess}" th:text="${logoutSuccess}" class="text-center text-green-600 text-lg my-4"></h2>
+        <h2 th:if="${cadastroSuccess}" th:text="${cadastroSuccess}" class="text-center text-green-600 text-lg my-4"></h2>
+
+        <form th:action="@{/login}" th:object="${dadosLogin}" method="post" class="bg-branco shadow-md rounded px-8 pt-6 pb-8 mb-4 dark:bg-cinza">
             <div class="relative z-0 w-full mb-5 group">
                 <input
                         type="email"
@@ -14,6 +20,7 @@
                         id="email"
                         class="block py-2.5 px-0 w-full text-sm bg-transparent border-0 border-b-2 appearance-none text-white border-gray-600 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
                         placeholder=" "
+                        th:field="*{email}"
                         required
                 />
                 <label
@@ -22,6 +29,7 @@
                 >
                     Endereço de email
                 </label>
+                <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-red-600 text-sm"></span>
             </div>
             <div class="relative z-0 w-full mb-5 group">
                 <input
@@ -30,6 +38,7 @@
                         id="senha"
                         class="block py-2.5 px-0 w-full text-sm bg-transparent border-0 border-b-2 appearance-none text-white border-gray-600 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
                         placeholder=" "
+                        th:field="*{senha}"
                         required
                 />
                 <label
@@ -38,6 +47,7 @@
                 >
                     Senha de acesso
                 </label>
+                <span th:if="${#fields.hasErrors('senha')}" th:errors="*{senha}" class="text-red-600 text-sm"></span>
             </div>
             <div class="flex items-center justify-between">
                 <a href="/" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline dark:bg-red-600 dark:hover:bg-red-700 dark:focus:bg-red-800">
