--- a/src/main/resources/templates/usuario/cadastro.html
+++ b/src/main/resources/templates/usuario/cadastro.html
@@ -5,8 +5,12 @@
 </head>
 <body class="bg-cinza-claro dark:bg-preto flex items-center justify-center h-screen">
 <section class="my-auto mx-auto w-full max-w-lg">
-    <h1 class="text-center text-xl text-cinza dark:text-branco my-4">Insira as informações para completar o seu
-        cadastro</h1>
+    <h1 class="text-center text-xl text-cinza dark:text-branco my-4">
+        Insira as informações para completar o seu cadastro
+    </h1>
+    <div class="bg-red-100 mb-4 rounded-lg p-2">
+        <h3 th:if="${erroDeCadastro}" th:text="${erroDeCadastro}" class="text-red-600 text-xl my-4 text-center"></h3>
+    </div>
     <form class="bg-branco shadow-md rounded px-8 pt-6 pb-8 mb-4 dark:bg-cinza" th:object="${dadosCadastro}"
           th:action="@{/usuario/cadastro}" method="post">
         <div class="relative z-0 w-full mb-5 group">
@@ -162,13 +166,15 @@
             </label>
             <span th:if="${#fields.hasErrors('ano')}" th:errors="*{ano}" class="text-red-600 text-sm"></span>
         </div>
+
         <div class="flex justify-between items-center gap-5">
-            <button
+            <a
                     type="button"
+                    th:href="@{/}"
                     class="text-white focus:ring-4 focus:outline-none font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center bg-red-600 hover:bg-red-700 focus:ring-red-800"
             >
                 Retornar
-            </button>
+            </a>
             <button
                     type="submit"
                     class="text-white focus:ring-4 focus:outline-none font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center bg-blue-600 hover:bg-blue-700 focus:ring-blue-800"
