Cadastrando veículos e verificando nos controllers o acesso válido

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -115,7 +115,7 @@
                 >
                     <a class="text-white font-semibold transition duration-200 opacity-75 hover:opacity-100 hover:ease-in-out focus:opacity-100 active:opacity-100 motion-reduce:transition-none lg:px-2"
                        aria-current="page"
-                       th:href="@{/veiculo/cadastrar}"
+                       th:href="@{/veiculo/cadastro}"
                        data-twe-nav-link-ref
                     >
                         Cadastrar meu veículo
