--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -4,9 +4,15 @@
     <title>Title</title>
 </head>
 <body>
-<footer th:fragment="footer" id="footer-contato" class="mt-8 bg-cinza shadow dark:bg-preto">
+<footer th:fragment="footer" id="footer-contato" class="mt-8 bg-cinza shadow dark:bg-preto h-40">
     <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
-      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 <a href="https://github.com/JelsonJr" target="_blank" class="hover:underline">ColtMaster™</a>. All Rights Reserved.
+      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023
+          <a href="https://github.com/JelsonJr"
+             target="_blank"
+             class="hover:underline"
+          >
+              ColtMaster™
+          </a>. All Rights Reserved.
     </span>
         <ul class="flex flex-wrap items-center gap-10 mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
             <li class="flex flex-col items-center justify-center">
@@ -27,6 +33,8 @@
             </li>
         </ul>
     </div>
+    <h4 class="text-lg text-center font-medium text-gray-500 dark:text-gray-400 mb-4">Disponível das 8h às 18h!</h4>
+    <h5 class="text-lg text-center font-medium text-gray-500 dark:text-gray-400">Agende já um horário para realizarmos o seu orçamento! E lembre-se de nos seguir nas redes sociais.</h5>
 </footer>
 </body>
 </html>
