Iniciando tela de listagem de serviços

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -121,6 +121,17 @@
                         Cadastrar meu veículo
                     </a>
                 </li>
+                <li class="my-2 ps-2 lg:my-0 lg:pe-1 lg:ps-2"
+                    data-twe-nav-item-ref
+                >
+                    <a class="text-white font-semibold transition duration-200 opacity-75 hover:opacity-100 hover:ease-in-out focus:opacity-100 active:opacity-100 motion-reduce:transition-none lg:px-2"
+                       aria-current="page"
+                       th:href="@{/usuario}"
+                       data-twe-nav-link-ref
+                    >
+                        Meu perfil/veiculos
+                    </a>
+                </li>
             </ul>
 
             <div class="flex items-center">
