--- a/src/main/resources/templates/servico/index.html
+++ b/src/main/resources/templates/servico/index.html
@@ -11,7 +11,7 @@
     <h1 class="font-bold text-2xl md:text-3xl lg:text-4xl xl:text-5xl 2xl:text-5xl text-dourado mb-12 mx-auto text-center">
         Nossos principais serviços
     </h1>
-    <section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
+    <section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4 gap-5">
         <div class="max-w-lg bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
             <a href="#">
                 <img class="rounded-t-lg" th:src="@{/images/oficina.jpg}" alt=""/>
